// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolbar renders with auth 1`] = `
<header
  className="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed makeStyles-appBar-1 MuiAppBar-colorDefault mui-fixed MuiPaper-elevation4"
>
  <div
    className="MuiToolbar-root MuiToolbar-regular makeStyles-header-2 MuiToolbar-gutters"
  >
    <nav
      className="makeStyles-nav-3"
    >
      <a
        className="MuiTypography-root MuiLink-root MuiLink-underlineNone MuiTypography-colorInherit"
        href="/"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <h1
          className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit"
        >
          Guild Chat
        </h1>
      </a>
      <a
        className="MuiTypography-root MuiLink-root MuiLink-underlineNone MuiTypography-colorInherit"
        href="/messages"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <p
          className="MuiTypography-root MuiTypography-body1 MuiTypography-colorInherit"
        >
          My Messages
        </p>
      </a>
    </nav>
    <div />
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-text"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Log Out
      </span>
    </button>
  </div>
</header>
`;

exports[`Toolbar renders without auth 1`] = `
<header
  className="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed makeStyles-appBar-1 MuiAppBar-colorDefault mui-fixed MuiPaper-elevation4"
>
  <div
    className="MuiToolbar-root MuiToolbar-regular makeStyles-header-2 MuiToolbar-gutters"
  >
    <nav
      className="makeStyles-nav-3"
    >
      <a
        className="MuiTypography-root MuiLink-root MuiLink-underlineNone MuiTypography-colorInherit"
        href="/"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <h1
          className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit"
        >
          Guild Chat
        </h1>
      </a>
    </nav>
    <div />
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-text"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Log In
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
</header>
`;
